update nav breakpoint to fix spacing issue (state hover covering other btns)

--- a/styles/customboot.less
+++ b/styles/customboot.less
@@ -1939,7 +1939,7 @@ img.grayscale {
   }
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 1140px){
   .nav.navbar-left {
     margin-bottom: 0;
 
